[tool.poetry]
name = "tor_ocr"
version = "0.3.0"
description = "A bot that posts transcriptions to /r/TranscribersOfReddit."
authors = ["Grafeas Group <devs@grafeas.org>"]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Communications :: BBS",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8"
]
repository = "https://github.com/GrafeasGroup/tor_ocr"
homepage = "https://github.com/GrafeasGroup/tor_ocr"
exclude = ['test', 'test.*', '*.test.*', '*.test']

[tool.poetry.dependencies]
python = "^3.8"
praw = "^7"
sh = "^1.12"
bugsnag = "^3.6"
requests = "^2.22"
python-dotenv = "^0.14.0"
blossom-wrapper = { git = "https://github.com/GrafeasGroup/blossom-wrapper.git", branch = "master" }

[tool.poetry.dev-dependencies]
better-exceptions = "^0.2.2"
pytest = "^5.1"
pytest-cov = "^2.7"
black = "^20.8b1"
flake8 = "^3.7.9"
mypy = "^0.761"

[tool.poetry.scripts]
tor-apprentice = "tor_ocr.main:main"

[tool.poetry.extras]
ci = ['pytest', 'pytest-cov']

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

