[tool.poetry]
name = "tor_ocr"
version = "0.0.0"
description = "A bot that posts transcriptions to /r/TranscribersOfReddit."
authors = ["Grafeas Group <devs@grafeas.org>"]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Communications :: BBS",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8"
]
repository = "https://github.com/GrafeasGroup/tor_ocr"
homepage = "https://github.com/GrafeasGroup/tor_ocr"
exclude = ['test', 'test.*', '*.test.*', '*.test']

[tool.poetry.dependencies]
python = "^3.8"
praw = "^7.6.0"
sh = "^1.12"
bugsnag = "^3.6"
requests = "^2.31"
python-dotenv = "^0.20.0"
blossom-wrapper = { git = "https://github.com/GrafeasGroup/blossom-wrapper.git", branch = "master" }
shiv = "^1.0.1"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]
better-exceptions = "^0.2.2"
black = "^22.6.0"
flake8 = "^5.0.4"
mypy = "^0.971"
poetry = "^1.1.14"
poetry2setup = { git = "https://github.com/abersheeran/poetry2setup", branch = "master" }
pytest-cov = "^3.0.0"

[tool.poetry.plugins."console_scripts"]
"tor_ocr" = "tor_ocr.main:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

